<resources>
    <string name="app_name">行业找工作</string>
    <string name="net_error">网络访问错误，请稍后再试</string>
    <string name="empty">还没有数据哦</string>
    <string name="loading">加载中...</string>
    <string name="reload">重新尝试</string>
    <string name="no_net">网络不可用,请检查你的网络</string>
    <string name="error">连接超时</string>
    <string name="error_dataError">数据错误</string>
    <string name="error_null">信息为空</string>
    <string name="error_net">网络不稳定，请稍后重试</string>
    <string name="error_notnet">无法连接网络</string>
    <string name="error_faile_connect">服务器连接失败</string>
    <string name="error_setting_faile">设置失败</string>
    <string name="error_101">网络不稳定</string>
    <string name="error_102">服务器临时不可用</string>
    <string name="error_103">请求无效</string>
    <string name="error_104">调用次数超过了限制</string>
    <string name="error_105">请求来自未经授权的IP地址</string>
    <string name="error_106">客户端版本过期，请升级客户端</string>
    <string name="error_201">请求数据校验失败</string>
    <string name="error_202">必须是POST提交</string>
    <string name="error_203">无效的SESSION_KEY</string>
    <string name="error_204">session key已过期</string>
    <string name="error_205">无效或缺少服务参数</string>
    <string name="error_206">执行失败</string>
    <string name="error_207">缺少必填项</string>
    <string name="error_208">记录不存在</string>
    <string name="error_209">超过记录最大限制</string>
    <string name="error_210">记录不可修改</string>
    <string name="error_301">用户不存在</string>
    <string name="error_302">用户名已经存在</string>
    <string name="error_303">用户未登录</string>
    <string name="error_304">简历不存在</string>
    <string name="error_305">第三方账号未绑定</string>
    <string name="error_306">本站账号已绑定过此类型第三方账号</string>
    <string name="error_307">第三方生成账号，只有一个绑定信息，不能够解绑</string>
    <string name="error_308">用户所属的行业不存在</string>
    <string name="error_309">简历/简历类型数超过最大分数</string>
    <string name="error_310">用户名与邮箱不匹配</string>
    <string name="error_311">用户名或密码错误</string>
    <string name="error_phoneOrPsw">手机号码或密码错误</string>
    <string name="error_312">用户被禁止</string>
    <string name="error_313">第三方账号已被本站账号绑定过</string>
    <string name="error_314">此账号类型无需激活</string>
    <string name="error_315">重置密码无效</string>
    <string name="error_317">简历不存在此项</string>
    <string name="error_318">不可创建非中文简历</string>
    <string name="error_319">简历的类型不可修改</string>
    <string name="error_320">简历不可复制</string>
    <string name="error_321">缺少中文简历</string>
    <string name="error_326">验证码已发送，请您不要频繁获取</string>
    <string name="error_327">手机号码已被使用</string>
    <string name="error_phoneNotExit">该手机号未被注册或绑定</string>
    <string name="error_phoneNotExit2">该手机号未注册/绑定</string>
    <string name="validAlreadySend">短信验证码已发送，请注意查看</string>
    <string name="voiceAlreadySend">语音验证码已发送，请注意接听</string>
    <string name="error_401">职位已过期</string>
    <string name="error_402">职位已过期</string>
    <string name="error_403">职位近期已经投递过了</string>
    <string name="error_404">简历完整度较低</string>
    <string name="error_405">请求操作太过频繁，3秒后重试</string>
    <string name="error_request">请求操作太过频繁，5秒后重试</string>
    <string name="error_406">职位已经收藏</string>
    <string name="error_407">职位已保密</string>
    <string name="error_408">用户被禁止投递</string>
    <string name="error_411">企业不存在</string>
    <string name="error_412">企业已经关闭</string>
    <string name="error_413">请完善您的简历</string>
    <string name="error_415">屏蔽的关键词对应的企业超过50个，请重新输入更准确的关键词</string>
    <string name="error_417">简历类型与职位类型不匹配</string>
    <string name="error_501">新闻不存在</string>
    <string name="error_502">新闻栏目不存在</string>
    <string name="error_503">新闻/推荐不是审核通过状态，不可更新浏览量</string>
    <string name="error_504">投票/调查报告已结束，不可保存</string>
    <string name="error_2010">密码不能包含企业名称与电话邮箱用户名</string>
    <string name="error_2012">密码与确认密码不一至</string>
    <string name="error_2013">用户名不合法(支持字母、数字、下划线，长度4-25位)</string>
    <string name="error_2014">用户名已存在</string>
    <string name="error_validCode">验证码错误</string>
    <string name="error_1101">网络正在连接，请重试</string>
    <string name="error_cul">网络太慢，您被挤走了～</string>
    <string name="error_other"></string>
    <string name="goInto">立即体验</string>
    <string name="exit">退出</string>
    <string name="share">分享</string>
    <string name="collection">收藏</string>
    <string name="collectionPosition">收藏职位</string>
    <string name="allReadyCollection">已收藏</string>
    <string name="allReadyDeliver">已投递</string>
    <string name="JobDes">岗位描述</string>
    <string name="companyGoodness">公司优势</string>
    <string name="scan_history">浏览记录</string>
    <string name="companyAd1">品牌招聘</string>
    <string name="companyAd2">炫公司</string>
    <string name="companyAd3">专题活动</string>
    <string name="feedback">意见反馈</string>
    <string name="deliverFeedBack">投递反馈</string>
    <string name="whoSeeMe">谁看了我</string>
    <string name="employmentGuidance">职场资讯</string>
    <string name="find">发现</string>
    <string name="companyMessage">企业来信</string>
    <string name="setting">设置</string>
    <string name="company">企业入口</string>
    <string name="home">主页</string>
    <string name="message">消息</string>
    <string name="warningTips">温馨提示</string>
    <string name="deleteJobOrder">至少保留一个期望职位，点击行业可编辑。</string>
    <string name="deliverOrNot1">是否投递</string>
    <string name="deliverOrNot2">职位？</string>
    <string name="updateMessage"> 升级简历后，您的简历将会从[学生简历]升级到[工作简历]，“实习经历”将会变为“工作经历”。</string>
    <string name="hideTips">Tips: 隐藏后企业将无法搜到您的简历</string>
    <string name="searchHint">输入职位名/公司名</string>
    <string name="search">搜索</string>
    <string name="area">地区</string>
    <string name="Function">职位</string>
    <string name="historySearch">历史搜索</string>
    <string name="searchCondition">设置搜索条件</string>
    <string name="resume">简历</string>
    <string name="goodComment">给个好评吧？</string>
    <string name="comment1">求职路漫漫，且行且珍惜，\n英才网联一路伴你。\n英才网联一路伴你。\n英才网联一路伴你。\n英才网联一路伴你。</string>
    <string name="comment2">英才网联一路伴你。</string>
    <string name="noComment">暂不评论</string>
    <string name="giveComment">给个评价</string>
    <string name="versionUpdate">版本更新</string>
    <string name="updateNow">立即更新</string>
    <string name="warmNotice">温馨提示</string>
    <string name="messageNotification">消息通知</string>
    <string name="shieldCompany1">屏蔽企业</string>
    <string name="shieldCompany">已屏蔽关键词</string>
    <string name="shieldCompanyAll">一键屏蔽</string>
    <string name="searchResult">搜索结果</string>
    <string name="shield">屏蔽</string>
    <string name="shieldCancel">取消屏蔽</string>
    <string name="resetPsw">修改密码</string>
    <string name="validPhone">验证手机</string>
    <string name="validPhoneWarn1">根据“中华人民共和国互联网个人实名制规定”，</string>
    <string name="validPhoneWarn2">要求个人“必须”完成手机号码验证，</string>
    <string name="validPhoneWarn3">望您理解，这将有利于您的求职！</string>
    <string name="changeTel">更换手机</string>
    <string name="changeTelephoneNumber">更换手机号码</string>
    <string name="evaluateMine">评价我们</string>
    <string name="versionDes">版本说明</string>
    <string name="companyInto">企业入口</string>
    <string name="changeAccount">更换账号</string>
    <string name="howToGet">如何得到：</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="anotherLoginWay">其他登录方式</string>
    <string name="phoneLogin">手机登录</string>
    <string name="userLogin">用户登录</string>
    <string name="phoneNumber">手机号码</string>
    <string name="phoneNumberNew">新手机号码</string>
    <string name="psw_old">旧密码（最少6位）</string>
    <string name="psw_new">新密码（最少6位）</string>
    <string name="psw">密码（最少6位）</string>
    <string name="pswLogin">密码登录</string>
    <string name="validLogin">动态码登录</string>
    <string name="newPsw">新密码</string>
    <string name="accountLogin">账号登录</string>
    <string name="phonePswLogin">手机密码登录</string>
    <string name="paste">粘贴</string>
    <string name="findPsw">找回密码</string>
    <string name="forgetPsw">忘记密码</string>
    <string name="alreadyDeliver">已投递</string>
    <string name="Seem">被查看</string>
    <string name="improper">不合适</string>
    <string name="bindNewAccount">绑定新账号</string>
    <string name="bindPhoneAccount">绑定手机</string>
    <string name="bindComplete">绑定完成</string>
    <string name="bindUserAccount">绑定账号</string>
    <string name="hasPhoneAcccount">已有手机账号</string>
    <string name="hasUserAccount">已有英才网联账号</string>
    <string name="hasAccount">已有账号？去登录</string>
    <string name="findPswUsePhone">用手机找回密码</string>
    <string name="userThirdPartLogin">使用下列账号快速登录</string>
    <string name="accountNumber">用户名</string>
    <string name="findAccountPsw">找回账号密码</string>
    <string name="emailNumber">邮箱号码</string>
    <string name="getValidCode">短信验证码</string>
    <string name="getVoiceCode">语音发送</string>
    <string name="or">|</string>
    <string name="ValidCode">验证码</string>
    <string name="completeRegister">完成注册</string>
    <string name="hasMoreResume">检测到您有多份简历</string>
    <string name="hasMoreResumeWarnning">为确保求职的准确性，请选择一份简历为默认简历</string>
    <string name="hasMoreResumeHelper">点击预览可查看该简历内容</string>
    <string name="preview">点击预览</string>
    <string name="previewResume">预览</string>
    <string name="resumePreview">简历预览</string>
    <string name="setDefault">设置默认</string>
    <string name="industry">行业</string>
    <string name="function">领域</string>
    <string name="intelligentRobotGreeting">您好，我是职位智能匹配机器人。</string>
    <string name="intelligentRobotHelper">为了帮助您匹配到更多合适的职位，能填写下面的这份简历吗？</string>
    <string name="resumeNone">简历未填写部分：</string>
    <string name="fillInResume">开始填写</string>
    <string name="submitSuccess">提交成功</string>
    <string name="submit">提交</string>
    <string name="exitWarning">当前内容还未保存，确定要退出吗？</string>
    <string name="cancle">取消</string>
    <string name="startTime">开始时间</string>
    <string name="endTime">结束时间</string>
    <string name="sure">确定</string>
    <string name="sureDeleteHistory">确认清空浏览记录吗？</string>
    <string name="sureDeleteEdu">确认要删除该教育背景？</string>
    <string name="sureDeleteLanguage">确认要删除该语言能力？</string>
    <string name="sureDeleteProject">确认要删除该项目经验？</string>
    <string name="sureDeletePlant">确认删除该培训经历？</string>
    <string name="sureDeleteSkill">确认删除该专业技能？</string>
    <string name="sureDeleteJobOrder">确认删除该求职意向？</string>
    <string name="sureDeleteWorkExp">确认删除该工作经历？</string>
    <string name="sureDeleteInternShipExp">确认删除该实习经历？</string>
    <string name="selectedPosition">已选职位</string>
    <string name="selectedExpectPosition">设置求职意向</string>
    <string name="selectedCity">已选城市</string>
    <string name="submitSuccessMsg">密码修改链接已提交到您的邮箱，请前去邮箱验证。</string>
    <string name="alright">好的，开始填写</string>
    <string name="addSuccess">添加成功</string>
    <string name="add">添加</string>
    <string name="takePhoto">拍照</string>
    <string name="selectPicture">图片</string>
    <string name="educationBackground">教育背景</string>
    <string name="workExp">工作经历</string>
    <string name="jobIntention">求职意向</string>
    <string name="trainExp">培训经历</string>
    <string name="languageSkill">语言能力</string>
    <string name="projectExp">项目经验</string>
    <string name="professionSkill">专业技能</string>
    <string name="addEducationBackground">+增加教育背景</string>
    <string name="addWorkExp">+增加工作经历</string>
    <string name="addProjectExp">+增加项目经验</string>
    <string name="addProfessionSkill">+增加专业技能</string>
    <string name="addLanguageSkill">+增加语言能力</string>
    <string name="addTrainExp">+增加培训经历</string>
    <string name="addIntroduction">+增加自我评价</string>
    <string name="introduction">自我评价</string>
    <string name="resumeAttachment">附件简历</string>
    <string name="updateResume">升级简历</string>
    <string name="updateResumeTips">Tips: 升级简历后将从“学生简历”变为“工作简历”</string>
    <string name="addResumeAttachment">+增加附件简历</string>
    <string name="cancel">取消</string>
    <string name="select">请选择</string>
    <string name="sellerintro">销售顾问推荐</string>
    <string name="friendInto">同事朋友推荐</string>
    <string name="InternetInfo">网络渠道</string>
    <string name="otherInfo">其他渠道</string>
    <string name="refresh">刷新</string>
    <string name="resumeInfo">简历详情</string>
</resources>