<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <item
            android:id="@+id/menu_collection"
            android:icon="@mipmap/collection_gray"
            android:title="@string/collection"
            />
        <item
            android:id="@+id/menu_history"
            android:icon="@mipmap/scan_history"
            android:title="@string/scan_history"
            />
        <item
            android:id="@+id/menu_feedBack"
            android:icon="@mipmap/feedback"
            android:title="@string/feedback"
            />
        <item
            android:id="@+id/menu_settings"
            android:icon="@mipmap/settings"
            android:title="@string/setting"
            />
</menu>