<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="200dp"
    android:background="@color/toast_stroke_gray"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/tv_pleaseSelect"
        android:textSize="@dimen/x26"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select"
        />
    <RelativeLayout style="@style/rl_howtoget" />
    <TextView
        android:id="@+id/tv_sellerIntro"
        android:textSize="@dimen/x26"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sellerintro"
        />
    <RelativeLayout style="@style/rl_howtoget" />
    <TextView
        android:id="@+id/tv_friendIntro"
        android:textSize="@dimen/x26"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friendInto"
        />
    <RelativeLayout style="@style/rl_howtoget" />
    <TextView
        android:id="@+id/tv_internetIntro"
        android:textSize="@dimen/x26"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InternetInfo"
        />
    <RelativeLayout style="@style/rl_howtoget" />
    <TextView
        android:id="@+id/tv_otherIntro"
        android:textSize="@dimen/x26"
        android:layout_marginBottom="@dimen/x10"
        android:layout_marginLeft="@dimen/x10"
        android:layout_marginTop="@dimen/x10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/otherInfo"
        />
</LinearLayout>