<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:alpha="1"
    android:id="@+id/rl_popTakePhoto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:elevation="@dimen/x40"
        android:background="@color/white"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="@dimen/x36"
            android:textColor="@color/color_333"
            android:text="@string/takePhoto"
            android:id="@+id/tv_takePhoto"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x100" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_color"
            />
        <TextView
            android:gravity="center"
            android:textSize="@dimen/x36"
            android:textColor="@color/color_333"
            android:text="@string/selectPicture"
            android:id="@+id/tv_selectPicture"

            android:layout_width="match_parent"
            android:layout_height="@dimen/x100" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/x1"
            android:background="@color/view_color"
            />
        <TextView
            android:gravity="center"
            android:textSize="@dimen/x36"
            android:textColor="@color/color_333"
            android:text="@string/cancel"
            android:id="@+id/tv_cancelSelect"
            android:layout_width="match_parent"
            android:layout_height="@dimen/x100" />
    </LinearLayout>
</FrameLayout>